--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="images/icons/favicon.ico">
 <!--===============================================================================================-->
 	<!--<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">-->
+	<link rel="stylesheet" type="text/css" href="librerias/bootstrap/css/bootstrap.css">
 <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="fonts/fontawesome-free-5.3.1-web/css/all.min.css">
 <!--===============================================================================================-->
@@ -54,7 +55,7 @@
 						</button>
 						<i class="fas fa-sync f021"></i>
 					</div>
-                    <div class="error text-danger">
+                    <div class="error text-danger text-center">
 				
 				    </div>
 				</form>
