Agregando carpetas en el administrador

--- a/Administrador/index.html
+++ b/Administrador/index.html
@@ -81,6 +81,6 @@
 <!--===========================================================================================-->
 	<script type="text/javascript" src="../librerias/vendor/countdowntime/countdowntime.js"></script>
 <!--===========================================================================================-->
-	<script type="text/javascript" src="../modulosc/login/login.js"></script>
+	<script type="text/javascript" src="modulosc/login/login.js"></script>
 </body>
 </html>
