Corrigiendo detalles con las consultas hackers,lider,juez en el Administrador

--- a/Administrador/index.html
+++ b/Administrador/index.html
@@ -39,12 +39,12 @@
 				</span> 
 				<form class="login100-form validate-form p-b-33 p-t-5" id="form">
 					<div class="wrap-input100 validate-input" data-validate = "Introducir usuario">
-						<input class="input100" type="text" name="email" placeholder="Usuario">
+						<input class="input100" type="text" name="email" placeholder="Usuario" autocomplete="off">
 						<span class="focus-input100" data-placeholder="&#xe82a;"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Introducir contraseña">
-						<input class="input100" type="password" name="password" placeholder="Password">
+						<input class="input100" type="password" name="password" placeholder="Password" autocomplete="off">
 						<span class="focus-input100" data-placeholder="&#xe80f;"></span>
 					</div>	
 
